--- a/css/login-createpost.css
+++ b/css/login-createpost.css
@@ -56,3 +56,9 @@ input[type=submit]{
     width: 80%;
     height:20%;
 }
+a:link{
+    text-decoration: none;
+}
+a:visited{
+    color:rgb(255, 98, 0);
+}
