--- a/css/login-createpost.css
+++ b/css/login-createpost.css
@@ -42,7 +42,7 @@ input[type=submit]{
 #createpost{
     margin:2em;
     display: flex;
-    background-color: #333;
+    background-color: #eee;
     width:60%;
     
 
