--- a/css/profile.css
+++ b/css/profile.css
@@ -32,6 +32,16 @@ nav ul li a {
   padding: 0.5em 0;
 }
 
+nav ul li a:hover{
+  background-color: rgb(242, 224, 207); 
+  color: white;
+  text-shadow: 0 0 5px rgba(0,0,0,0.5);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2); 
+  padding: 0.5em; 
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
 .main-content {
   flex-grow: 1;
   display: flex;
