--- a/css/login-createpost.css
+++ b/css/login-createpost.css
@@ -115,6 +115,24 @@ a:link, a:visited {
     resize: vertical; /* Allow vertical resizing only */
 }
 
+#createpost select {
+    width: calc(100% - 22px); 
+    padding: 10px; 
+    margin-bottom: 1em; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    background-color: #fff; 
+    color: #333; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    cursor: pointer; 
+}
+
+
+#createpost option {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+}
+
+
 
 /* Responsive adjustments */
 @media only screen and (max-width: 768px) {
