--- a/css/home.css
+++ b/css/home.css
@@ -108,8 +108,26 @@ footer {
     font-size: 0.9em;
 }
 .post-date {
-    color: #999; /* A lighter, less intrusive color for the date */
-    font-size: 0.8em; /* Slightly smaller font size for a subtle look */
-    margin-bottom: 1em; /* Space between the date and the content or username */
-    display: block; /* Ensure it's displayed as a block element for proper spacing */
+    color: #999; 
+    font-size: 0.8em; 
+    margin-bottom: 1em; 
+    display: block;
 }
+.post-category {
+    margin-top: 0.5em; 
+    font-size: 0.9em; 
+    color: #666; 
+}
+
+.category {
+    background-color: rgb(255, 235, 230); 
+    color: rgb(255, 98, 0); 
+    padding: 0.2em 0.5em; 
+    border-radius: 15px; 
+    display: inline-block; 
+}
+
+.category:hover {
+    background-color: rgb(255, 210, 200); 
+}
+
