--- a/css/home-loggedin.css
+++ b/css/home-loggedin.css
@@ -24,7 +24,11 @@ nav ul {
     list-style-type: none;
     padding: 0;
 }
+a{
+    text-decoration: none;
+    color: white;
 
+}
 nav ul li a {
     color: white;
     text-decoration: none;
