--- a/css/home-loggedin.css
+++ b/css/home-loggedin.css
@@ -15,6 +15,7 @@ nav {
     color: white;
     padding: 1em;
 }
+
 nav h1{
     color: rgb(255, 98, 0);
 }
@@ -30,7 +31,6 @@ nav ul li a {
     display: block;
     padding: 0.5em 0;
 }
-
 nav ul li a:hover{
     background-color: rgb(242, 224, 207); 
     color: white;
@@ -51,31 +51,33 @@ header {
     display: flex;
     padding: 1em;
     background-color: #eee;
+    align-items: center;
 }
 
-header input[type="search"] {
+header input[type="search"], header button {
     flex: 1;
     padding: 0.5em;
     margin-right: 1em;
-    border: none; /* Removes the default border */
-    border-radius: 25px; /* Gives the search box rounded corners */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow for depth */
-    font-size: 1em; /* Adjust font size as needed */
-}
-header button {
-    padding: 0.5em 1em;
     border: none;
-    border-radius: 25px; /* Rounded corners for the button */
-    background-color: #0079d3; /* A blue background for the button */
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-size: 1em;
+}
+
+#new-post-btn {
+    margin-left: auto; /* Pushes the new post button to the far right */
+}
+
+header button {
+    background-color: #0079d3;
     color: white;
     font-weight: bold;
-    cursor: pointer; /* Changes the cursor to indicate it's clickable */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Consistent shadow with the search box */
-    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 header button:hover {
-    background-color: #005999; /* Darker shade of blue on hover */
+    background-color: #005999;
 }
 
 main {
@@ -107,12 +109,14 @@ footer {
     margin-top: 1em;
     font-size: 0.9em;
 }
+
 .post-date {
     color: #999; 
     font-size: 0.8em; 
     margin-bottom: 1em; 
-    display: block;
+    display: block; 
 }
+
 .post-category {
     margin-top: 0.5em; 
     font-size: 0.9em; 
@@ -130,4 +134,6 @@ footer {
 .category:hover {
     background-color: rgb(255, 210, 200); 
 }
+
+
 
