--- a/css/home-loggedin.css
+++ b/css/home-loggedin.css
@@ -135,25 +135,21 @@ footer {
     background-color: rgb(255, 210, 200); 
 }
 
-/* Style for unvisited and visited post titles */
+
 .postTitle, .postTitle:visited {
-    text-decoration: none; /* Removes underline from the link */
-    color: #333; /* Set a neutral color or any color that fits your design */
-    font-weight: bold; /* Adds boldness to make it stand out */
+    text-decoration: none; 
+    color: #333; 
+    font-weight: bold; 
 }
 
-/* Style for mouse hover over post titles */
+
 .postTitle:hover {
-    color: #005999; /* Change color on hover for interactivity */
-    text-decoration: none; /* Ensure underline does not appear on hover */
+    color: #005999; 
+    text-decoration: none; 
 }
 
-/* Style for active (clicked) post titles */
+
 .postTitle:active {
-    color: #0079d3; /* Optional: Change color when the link is being clicked */
-    text-decoration: none; /* Ensure underline does not appear on active link */
+    color: #0079d3; 
+    text-decoration: none; 
 }
-
-
-
-
